# zsh-aliases

./: .bumplus.toml  .bumpversion.cfg  .env.example  .eslintignore  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .tmuxinator.yml  CHANGELOG.rst  Makefile  README.md  README.rst  SECURITY.md  Taskfile.yml  docker.zsh  mkdocs.yml  package.json  pyproject.toml  setup.cfg  sonar-project.properties  zsh-aliases.zsh
.chglog/: config.yml
.ci/linters/: .gitleaks.toml  .goreleaser.yml  markdown-link-config.json
.github/: ISSUE_TEMPLATE.md
config/: main.zsh
core/: docker.zsh  main.zsh
docs/: commands.md  components.md  contributing.md  env-vars.md  index.md  releasing.md  roadmap.md  usage.md
docs/contribute/: github-flow.md
docs/examples/: common.md
docs/include/installation/: antibody.md  antigen.md  oh-my-zsh.md
docs/source/: CONTRIBUTING.rst  RELEASING.rst  SUPPORT.rst
extras/make/: test.mk
internal/: docker.zsh  editor.zsh  eza.zsh  main.zsh
pkg/: main.zsh
provision/docker-compose/: dev.yml  prod.yml  stage.yml  test.yml
provision/docker/app/: Dockerfile
provision/docker/check/: Dockerfile
provision/docker/docs/: Dockerfile
provision/generators/: README.yaml
src/: base.zsh  docker.zsh  exa.zsh
src/functions/: fzf.zsh
